Mobile snap scroll fix + FearToStart heading line break on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,10 +15,20 @@
 }
 
 html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  overflow-y: scroll;
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
-  overflow-y: scroll;
-  height: 100%;
+  -webkit-overflow-scrolling: touch;
+  background-color: var(--color-fd-black);
+  color: var(--color-fd-gray-light);
+  font-family: var(--font-sans);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .snap-section {
@@ -27,14 +37,6 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-body {
-  background-color: var(--color-fd-black);
-  color: var(--color-fd-gray-light);
-  font-family: var(--font-sans);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 ::selection {
